crates/toml/tests/snapshots/invalid/key/duplicate-keys-07.stderr
TOML parse error at line 2, column 1
  |
2 | "" = 2
  | ^^
duplicate key
